--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "my-app": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
