--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "framer-motion": "^12.16.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "my-app": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "swiper": "^11.2.8"
