--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
+    "react-world-flags": "^1.6.0",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
